// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="components-text-index-m__container"
>
  <TextIcon />
  <input
    autoCapitalize="none"
    autoComplete="off"
    autoCorrect="off"
    className="components-text-index-m__input"
    disabled={false}
    id="some-id"
    maxLength={50}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    placeholder="The Placeholder"
    readOnly={false}
    spellCheck={false}
    type="text"
    value="term"
  />
</div>
`;

exports[`should render correctly with an error 1`] = `
<div
  className="components-text-index-m__container"
>
  <TextIcon />
  <input
    autoCapitalize="none"
    autoComplete="off"
    autoCorrect="off"
    className="components-text-index-m__input-error components-text-index-m__input components-text-index-m__error"
    disabled={false}
    id="some-id"
    maxLength={50}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    placeholder="The Placeholder"
    readOnly={false}
    spellCheck={false}
    type="text"
    value="term"
  />
</div>
`;
